--- a/index.html
+++ b/index.html
@@ -11,13 +11,34 @@
 <body>
     <header class="cabeçalho">
         <div class="container">
-        <span class="cabeçalho_menu-hamburguer container_imagem"></span>
-        <img src="img/Logo.svg" alt="logotipo-start" class="container_imagem">
+            <input type="checkbox" id="menu" class="container__botao">
+            <label for="menu">
+                <ul class="lista-menu">
+                    <li class="lista-menu__titulo">Categorias</li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Aventura</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Biografia</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Ficção Científica</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Romance</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Vestibular</a>
+                    </li>
+                </ul>
+            <span class="cabeçalho_menu-hamburguer container_imagem"></span>
+            </label>
+        <img src="img/Logo.svg" alt="logotipo" class="container_imagem">
         </div>
-        <div>
-        <a href="#"><img src="img/Favoritos.svg" alt="Meus Favoritos" class="container_imagem"></a>
-        <a href="#"><img src="img/Emprestimos.svg" alt="Meus Emprestimos" class="container_imagem"></a>
-        <a href="#"><img src="img/Usuario.svg" alt="Meus Perfil" class="container_imagem"></a>
+        <div class="container">
+            <a href="#"><img src="img/Favoritos.svg" alt="Meus Favoritos" class="container_imagem"></a>
+            <a href="#"><img src="img/Emprestimos.svg" alt="Meus Emprestimos" class="container_imagem"></a>
+            <a href="#"><img src="img/Usuario.svg" alt="Meus Perfil" class="container_imagem"></a>
         </div>
 
     </header>
